--- a/styles_conference/index.html
+++ b/styles_conference/index.html
@@ -6,10 +6,11 @@
   <title>Styles Conference</title>
 </head>
 <body>
-  <header>
+  <header class="container">
     <h1>
       <a href="index.html">Styles Conference</a>
     </h1>
+    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
     <nav>
       <a href="index.html">Home</a>
       <a href="speakers.html">Speakers</a>
@@ -17,14 +18,14 @@
       <a href="venue.html">Venue</a>
       <a href="register.html">Register</a>
     </nav>
-    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
   </header>
-  <section>
+  <section class="hero container">
     <h2>Dedicated ot the Craft of Building Websites</h2>
-    <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-    <a href="register.html">Register</a>
+    <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!
+    </p>
+    <a class="btn btn-alt" href="register.html">Register Now</a>
   </section>
-  <section>
+  <section  class="container">
     <section>
       <a href="speakers.html">
         <h5>Speakers</h5>
@@ -33,7 +34,7 @@
       <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
     </section>
     <section>
-      <a href="schedules.html">
+      <a href="schedule.html">
         <h5>Schedule</h5>
         <h3>Three Inspiring Days</h3>
       </a>
@@ -48,7 +49,7 @@
     </section>
   </section>
 </body>
-<footer>
+<footer class="container">
   <nav>
     <a href="index.html">Home</a>
     <a href="speakers.html">Speakers</a>
