--- a/styles_conference/speakers.html
+++ b/styles_conference/speakers.html
@@ -6,7 +6,7 @@
   <title>Styles Conference</title>
 </head>
 <body>
-  <header>
+  <header class="container">
     <h1>
       <a href="index.html">Styles Conference</a>
     </h1>
@@ -19,7 +19,7 @@
     </nav>
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
   </header>
-  <footer>
+  <footer class="container">
   <nav>
     <a href="index.html">Home</a>
     <a href="speakers.html">Speakers</a>
