--- a/styles_conference/schedule.html
+++ b/styles_conference/schedule.html
@@ -6,10 +6,11 @@
   <title>Styles Conference</title>
 </head>
 <body>
-  <header class="container">
-    <h1>
-      <a href="index.html">Styles Conference</a>
+  <header class="container group">
+    <h1 class="logo">
+      <a href="index.html">Styles <br> Conference</a>
     </h1>
+    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
     <nav>
       <a href="index.html">Home</a>
       <a href="speakers.html">Speakers</a>
@@ -17,9 +18,8 @@
       <a href="venue.html">Venue</a>
       <a href="register.html">Register</a>
     </nav>
-    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
   </header>
-  <footer class="container">
+  <footer class="primary-footer container group">
   <nav>
     <a href="index.html">Home</a>
     <a href="speakers.html">Speakers</a>
