--- a/styles_conference/index.html
+++ b/styles_conference/index.html
@@ -1,68 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="assets/stylesheets/main.css">
   <meta charset="utf-8">
   <title>Styles Conference</title>
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
 </head>
 <body>
-  <header class="container group">
+  <header class="primary-header container group">
     <h1 class="logo">
       <a href="index.html">Styles <br> Conference</a>
     </h1>
-    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="speakers.html">Speakers</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="venue.html">Venue</a>
-      <a href="register.html">Register</a>
+    <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+    <nav class="nav primary-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="speakers.html">Speakers</a></li><!--
+        --><li><a href="schedule.html">Schedule</a></li><!--
+        --><li><a href="venue.html">Venue</a></li><!--
+        --><li><a href="register.html">Register</a></li>
+      </ul>
     </nav>
   </header>
-  <section class="hero container">
-    <h2>Dedicated ot the Craft of Building Websites</h2>
-    <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!
-    </p>
-    <a class="btn btn-alt" href="register.html">Register Now</a>
-  </section>
-  <section  class="grid">
-
-  <!-- Speakers -->
-    <section class="col-1-3">
-      <a href="speakers.html">
-        <h5>Speakers</h5>
-        <h3>World-Class Speakers</h3>
-      </a>
-      <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-    </section><!--
-    
-    Schedule
-  --><section class="col-1-3">
-      <a href="schedule.html">
-        <h5>Schedule</h5>
-        <h3>Three Inspiring Days</h3>
-      </a>
-      <p>Enjoy three inspiring action-packed days of talks, gatherings, and all-around good times.</p>
-    </section><!--
-
-    Venue
-  --><section class="col-1-3">
-      <a href="venue.html">
-        <h5>Venue</h5>
-        <h3>The Chicago Theatre</h3>
-      </a>
-      <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+    <section class="hero container">
+      <h2>Dedicated to the Craft of Building Websites</h2>
+      <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!
+      </p>
+      <a class="btn btn-alt" href="register.html">Register Now</a>
     </section>
+  <section class="row">
+    <div class="grid">
+    <!-- Speakers -->
+      <section class="teaser col-1-3">
+        <h5>Speakers</h5>
+          <a href="speakers.html">
+          <img src="assets/images/home/speakers.jpg" alt="Professional Speaker">
+          <h3>World-Class Speakers</h3>
+        </a>
+        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+      </section><!--
+      
+      Schedule
+    --><section class="teaser col-1-3">
+        <h5>Schedule</h5>  
+        <a href="schedule.html">
+          <img src="assets/images/home/schedule.jpg" alt="Audience">
+          <h3>Three Inspiring Days</h3>
+        </a>
+        <p>Enjoy three inspiring action-packed days of talks, gatherings, and all-around good times.</p>
+      </section><!--
+  
+      Venue
+    --><section class="teaser col-1-3">
+        <h5>Venue</h5>  
+          <a href="venue.html">
+          <img src="assets/images/home/venue.jpg" alt="Chicago Theatre">
+          <h3>The Chicago Theatre</h3>
+        </a>
+        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+      </section>
+    </div>
   </section>
 </body>
 <footer class="primary-footer container group">
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="speakers.html">Speakers</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="venue.html">Venue</a>
-    <a href="register.html">Register</a>
-  </nav>
   <small>&copy; Styles Conference</small>
+  <nav class="nav">
+    <ul>
+      <li><a href="index.html">Home</a></li><!--
+      --><li><a href="speakers.html">Speakers</a></li><!--
+      --><li><a href="schedule.html">Schedule</a></li><!--
+      --><li><a href="venue.html">Venue</a></li><!--
+      --><li><a href="register.html">Register</a></li>
+    </ul>
+  </nav>
 </footer>
 </html>
